--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "description": "Simple Startup Project - can be used as template for more complex stuff",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "db:gen": "drizzle-kit generate",
+    "db:migrate": "tsx src/drizzle/migrate.ts",
     "dev": "tsx watch src/main.ts",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,7 +23,13 @@
   "homepage": "https://github.com/Equindar/Node-DrizzleORM-MySQL_ProjectTemplate#readme",
   "devDependencies": {
     "@types/node": "^24.3.1",
+    "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
+  },
+  "dependencies": {
+    "dotenv": "^17.2.2",
+    "drizzle-orm": "^0.44.5",
+    "mysql2": "^3.14.4"
   }
 }
